--- a/BACKEND/loggenerator/Dockerfile
+++ b/BACKEND/loggenerator/Dockerfile
@@ -1,12 +1,25 @@
-# Use an official OpenJDK image from the Docker Hub
-FROM openjdk:17-jdk-slim
+# Stage 1: Build the JAR using Maven
+FROM maven:3.9.9-eclipse-temurin-17 AS build
 
-# Set the working directory inside the container
 WORKDIR /app
-RUN ls
-COPY target/logGenerator-3.5.5.jar app.jar
+
+# Copy only loggenerator service code
+#COPY BACKEND/loggenerator/pom.xml .
+#COPY BACKEND/loggenerator/src ./src
+COPY pom.xml .
+COPY src ./src
+
+# Package JAR
+RUN mvn clean package -DskipTests
+
+# Stage 2: Run the JAR
+FROM eclipse-temurin:17-jdk
+
+WORKDIR /app
+
+# Copy JAR from build stage
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8780
 
-# Command to run the jar file
-CMD ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
