--- a/BACKEND/loganalyser/src/main/resources/application.properties
+++ b/BACKEND/loganalyser/src/main/resources/application.properties
@@ -23,3 +23,8 @@ logging.level.org.springframework.web=DEBUG
 # application.properties
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.server.port=${SERVER_PORT:8080}
+
