--- a/BACKEND/logcollector/src/main/resources/application.properties
+++ b/BACKEND/logcollector/src/main/resources/application.properties
@@ -31,3 +31,8 @@ infourl=http://localhost:8783/info
 errorurl=http://localhost:8782/error
 warnurl=http://localhost:8784/warn
 debugurl=http://localhost:8781/debug
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.server.port=${SERVER_PORT:8080}
+
