--- a/BACKEND/Jenkinsfile
+++ b/BACKEND/Jenkinsfile
@@ -1,39 +1,47 @@
 pipeline {
     agent any
 
+    environment {
+        BACKEND_DIR = "BACKEND"
+        DOCKERHUB_REPO = "pansura/demo"
+    }
+
     stages {
-        stage('Checkout SCM') {
+        stage('Checkout') {
             steps {
-                echo "📥 Checking out code from GitHub..."
                 git branch: 'dev-cloud', url: 'https://github.com/vivekgshan/Log-Processing.git'
             }
         }
 
-        stage('Build JARs') {
+        stage('Build with Docker Compose') {
             steps {
-                echo "🔨 Building JARs for loggenerator and loglistener..."
-                script {
-                    if (isUnix()) {
-                        sh 'mvn -f BACKEND/loggenerator/pom.xml clean package -DskipTests'
-                        sh 'mvn -f BACKEND/loglistener/pom.xml clean package -DskipTests'
-                    } else {
-                        bat 'mvn -f BACKEND\\loggenerator\\pom.xml clean package -DskipTests'
-                        bat 'mvn -f BACKEND\\loglistener\\pom.xml clean package -DskipTests'
+                dir("${BACKEND_DIR}") {
+                    script {
+                        // Rebuild containers
+                        sh 'docker compose -f docker-compose.yaml down || true'
+                        sh 'docker compose -f docker-compose.yaml build'
                     }
                 }
             }
         }
 
-        stage('Build Docker Images') {
+        stage('Push Images to DockerHub') {
             steps {
-                echo "🐳 Building Docker images..."
-                script {
-                    if (isUnix()) {
-                        sh 'docker build -t loggenerator:latest -f BACKEND/loggenerator/Dockerfile .'
-                        sh 'docker build -t loglistener:latest -f BACKEND/loglistener/Dockerfile .'
-                    } else {
-                        bat 'docker build -t loggenerator:latest -f BACKEND\\loggenerator\\Dockerfile .'
-                        bat 'docker build -t loglistener:latest -f BACKEND\\loglistener\\Dockerfile .'
+                dir("${BACKEND_DIR}") {
+                    script {
+                        withCredentials([usernamePassword(credentialsId: 'dockerhub',
+                                                          usernameVariable: 'DOCKERHUB_USER',
+                                                          passwordVariable: 'DOCKERHUB_PASS')]) {
+                            sh '''
+                                echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USER" --password-stdin
+
+                                for service in logcollector logerrorpersistor logdebugpersistor logwarnpersistor loginfopersistor loganalyser; do
+                                    echo "📦 Tagging and pushing $service..."
+                                    docker tag backend-$service:latest ${DOCKERHUB_REPO}:$service
+                                    docker push ${DOCKERHUB_REPO}:$service
+                                done
+                            '''
+                        }
                     }
                 }
             }
@@ -41,36 +49,10 @@ pipeline {
 
         stage('Deploy with Docker Compose') {
             steps {
-                echo "🚀 Deploying with docker-compose..."
-                script {
-                    if (isUnix()) {
-                        sh '''
-                        cd Deployment-genlis
-                        # stop and remove old containers first
-                        docker-compose down || true
-                        docker rm -f loggenerator loglistener || true
-                        docker-compose up -d --build
-                        '''
-                    } else {
-                        bat '''
-                        cd Deployment-genlis
-                        docker-compose down || exit 0
-                        docker rm -f loggenerator loglistener || exit 0
-                        docker-compose up -d --build
-                        '''
-                    }
-                }
-            }
-        }
-
-        stage('Verify Running Containers') {
-            steps {
-                echo "🩺 Checking containers..."
-                script {
-                    if (isUnix()) {
-                        sh 'docker ps -a'
-                    } else {
-                        bat 'docker ps -a'
+                dir("${BACKEND_DIR}") {
+                    script {
+                        // Run containers from compose
+                        sh 'docker compose -f docker-compose.yaml up -d'
                     }
                 }
             }
@@ -79,7 +61,7 @@ pipeline {
 
     post {
         always {
-            echo "⚠️ Pipeline finished."
+            sh 'docker ps -a || true'
         }
     }
 }
