--- a/Deployment-genlis/docker-compose-monitoring.yml
+++ b/Deployment-genlis/docker-compose-monitoring.yml
@@ -1,26 +1,13 @@
 version: "3.9"
 
 services:
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana-data:/var/lib/grafana
-    networks:
-      - monitor-net
-    depends_on:
-      - prometheus
-
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus-data:/prometheus
     ports:
       - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - monitor-net
 
@@ -37,9 +24,18 @@ services:
     networks:
       - monitor-net
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    networks:
+      - monitor-net
+
 volumes:
-  grafana-data:
-  prometheus-data:
+  grafana-storage:
 
 networks:
   monitor-net:
