--- a/BACKEND/loggenerator/pom.xml
+++ b/BACKEND/loggenerator/pom.xml
@@ -76,6 +76,14 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>	
 	</dependencies>
 
 	<!--<build>
